# briertools

./: .gitignore  LICENSE.txt  __init__.py  pyproject.toml
assel/: metrics.py  simulation.py  test.py
briertools/: __init__.py  brier.py  dca.py  logloss.py  scorers.py  utils.py
briertools/assel/: simulation.py  test.py
briertools/tests/: test_metrics.py
demo/: Untitled.ipynb  bcsc.py  custom.py  dca.py  decomposition.py  demo.ipynb  demo1.ipynb  formatter.py  nodata.py  paper.py  roc_comparison.py  standard.py  weights.py
demo/data/: bcsc.csv
metrics/: brier.py  logloss.py
tests/: paper_examples.py  test_metrics.py
