[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briertools"
version = "0.0.1"
description = "Mixture of Thresholds based Consequentialist Binary Classifier Evaluation"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "scipy"
]

[tool.setuptools]
packages = ["briertools"]
